--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@editorjs/editorjs": "^2.28.0",
         "ui-avatars": "^1.0.0"
     }
 }
