Integration with Firebase Cloud Messaging (FCM)

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "@editorjs/editorjs": "^2.28.0",
+        "firebase": "^10.4.0",
         "ui-avatars": "^1.0.0"
     }
 }
